# QEAnnotation

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
_test_packge/: conanfile.py
conan/: conanfile.py
conan/test_package/: conanfile.py
src/: CMakeLists.txt  QEAnnotation.cpp  QEAnnotation.hpp  QEAnnotationItem.cpp  QEAnnotationItem.hpp  QEAnnotationModel.cpp  QEAnnotationModel.hpp
src/qe/annotation/: Annotation.cpp  Annotation.hpp  CMakeLists.txt  Global.hpp  Item.cpp  Item.hpp  Model.cpp  Model.hpp  ModelPrivate.cpp  ModelPrivate.hpp  global.hpp
test/: AnnotateClassOne.cpp  AnnotateClassOne.hpp  CMakeLists.txt  QAnnotationTest.cpp  QAnnotationTest.hpp
test_package/: CMakeLists.txt  main.cpp
tools/cmake/: common.cmake
